--- a/dapp/src/index.html
+++ b/dapp/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
-    <title>CSRfi</title>
+    <title>SFSfi</title>
     <style>
         :root {
             --primary: #3F51B5;
-            --secondary: #FF9800;
+            --secondary: #dffe00;
             --background: #F5F5F5;
             --text-primary: #000000;
             --text-secondary: #ffffff;
@@ -16,7 +16,7 @@
 
         [data-theme="dark"] {
             --primary: #FAFAFC;
-            --secondary: #EAC85A;
+            --secondary: #dffe00;
             --background: #211E28;
             --text-primary: #ffffff;
             --text-secondary: #000000;
